--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,27 @@
+$main-font-size: calc(10px + 2vmin);
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
 }
 
+.loginInput {
+  margin: 0 5vmin 0 0;
+  padding: 2vmin;
+  font-size: $main-font-size;
+  border-radius: 2vmin;
+  outline: 0;
+}
+
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
+    animation: App-logo-float infinite 2s ease-out;
   }
 }
 
@@ -19,7 +31,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: $main-font-size;
 }
 
 .App-link {
@@ -28,12 +40,12 @@
 
 @keyframes App-logo-float {
   0% {
-    transform: translateY(0);
+    transform: scale(1);
   }
   50% {
-    transform: translateY(10px)
+    transform: scale(1.05);
   }
   100% {
-    transform: translateY(0px)
+    transform: scale(1);
   }
 }
