switch from user auth to token auth, add readme

--- a/src/App.scss
+++ b/src/App.scss
@@ -98,6 +98,14 @@ h2
   background-color: #EEE;
 }
 
+a:link {
+  color: #222;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
 #repos tr:hover {
   background-color: #EEE;
   cursor: pointer;
