--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@ $border-radius: 0;
   text-align: center;
 }
 
-.loginScreenWrapper{
+.loginScreenWrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -93,6 +93,10 @@ a:hover {
 tr {
   height: 4vw;
   padding: 2vw;
+}
+
+.titles {
+  padding: 0 2vh;
 }
 
 #repos td {
